Added vector features